# api-mettwasser-xyz

./: .dockerignore  Cargo.toml  Dockerfile  README.md  autobuild-start.ps1  autobuild-stop.ps1  docker-compose.yaml  rustfmt.toml  server.ps1  tailwind.config.js
.github/workflows/: ghcr-publish.yaml
assets/: global.css  index.css
assets/scripts/: index.js  typewriter.js
docs/: OpenAPI.yml
src/: assets.rs  docs.rs  error.rs  error_codes.rs  extract.rs  home.rs  lib.rs  macros.rs  main.rs  utils.rs
src/api/: mod.rs
src/api/image/: hex_color.rs  mod.rs
src/api/image/captcha/: mod.rs
src/api/image/dominant_colors/: mod.rs
src/api/image/image_round/: logic.rs  mod.rs
src/api/image/preview_color/: mod.rs  preview_size.rs
src/api/utility/: mod.rs
src/api/utility/random_color/: mod.rs
src/endpoints/: image_round.rs  mod.rs
src/endpoints/home/: endpoint.rs
src/endpoints/image/: mod.rs
src/endpoints/image/captcha/: endpoint.rs  mod.rs
src/endpoints/image/image_round/: endpoint.rs  logic.rs
src/endpoints/image/preview_color/: endpoint.rs  hex_color.rs  logic.rs  mod.rs  preview_size.rs  queryparams.rs
src/endpoints/image_round/: endpoint.rs  error.rs  logic.rs  mod.rs
src/endpoints/random_color/: endpoint.rs  mod.rs  model.rs
src/home/: mod.rs
templates/: index.html
