[package]
name = "api-mettwasser-xyz"
version = "0.3.1"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["macros"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs"] }
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
image = "0.24.7"
axum-swagger-ui = "0.3.0"
include_dir = "0.7.3"
rand = "0.8.5"
lazy_static = "1.4.0"
color_names = "1.0.0"
derive_more = "0.99.17"
captcha-rs = "0.2.10"
thiserror = "1.0.61"
paste = "1.0.15"
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = [
    "axum",
    "reqwest",
] }
utoipa = { version = "5.0.0-alpha.0", features = ["axum_extras", "chrono", "repr"] }
serde_repr = "0.1.19"
